--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,240 +1,297 @@
-html,
 body {
-    height: 100%;
+  background-color: #fff;
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
-body {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #f5f5f5;
+h1>a {
+  text-decoration: none;
+  color: #fff !important;
 }
 
-.form-signin {
+.intro-section {
+  background-image: url(../images/vecteezy_green-abstract-geometric-shape-background_.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 75px 95px;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  color: #ffffff;
+}
+
+@media (max-width: 991px) {
+  .intro-section {
+    padding-left: 50px;
+    padding-rigth: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .intro-section {
+    padding: 28px;
+  }
+}
+
+@media (max-width: 575px) {
+  .intro-section {
+    min-height: auto;
+  }
+}
+
+.brand-wrapper .logo {
+  height: 35px;
+}
+
+@media (max-width: 767px) {
+  .brand-wrapper {
+    margin-bottom: 35px;
+  }
+}
+
+.intro-content-wrapper {
+  width: 410px;
+  max-width: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.intro-content-wrapper .intro-title {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 17px;
+}
+
+.intro-content-wrapper .intro-text {
+  font-size: 19px;
+  line-height: 1.37;
+}
+
+.intro-content-wrapper .btn-read-more {
+  background-color: #fff;
+  padding: 13px 30px;
+  border-radius: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #000;
+}
+
+.intro-content-wrapper .btn-read-more:hover {
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+@media (max-width: 767px) {
+  .intro-section-footer {
+    margin-top: 35px;
+  }
+}
+
+.intro-section-footer .footer-nav a {
+  font-size: 20px;
+  font-weight: bold;
+  color: inherit;
+}
+
+@media (max-width: 767px) {
+  .intro-section-footer .footer-nav a {
+    font-size: 14px;
+  }
+}
+
+.intro-section-footer .footer-nav a+a {
+  margin-left: 30px;
+}
+
+.form-section {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+
+@media (max-width: 767px) {
+  .form-section {
+    padding: 35px;
+  }
+}
+
+.login-wrapper {
+  width: 300px;
+  max-width: 100%;
+}
+
+@media (max-width: 575px) {
+  .login-wrapper {
     width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
+  }
 }
 
-.form-signin .checkbox {
-    font-weight: 400;
+.login-wrapper .form-control,.signup-wrapper {
+  border: 0;
+  border-bottom: 1px solid #e7e7e7;
+  border-radius: 0;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 15px 10px;
+  margin-bottom: 7px;
 }
 
-.form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
+.login-wrapper .form-control::-webkit-input-placeholder {
+  color: #b0adad;
 }
 
-.form-signin .form-control:focus {
-    z-index: 2;
+.login-wrapper .form-control::-moz-placeholder {
+  color: #b0adad;
 }
 
-.form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+.login-wrapper .form-control:-ms-input-placeholder {
+  color: #b0adad;
 }
 
-.form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+.login-wrapper .form-control::-ms-input-placeholder {
+  color: #b0adad;
 }
 
-.hero {
-    background: #3b5d50;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Adjust the height as needed */
-    text-align: center;
-    padding: 10px;
-    box-sizing: border-box; /* Ensures padding doesn't affect overall dimensions */
-  }
-  
-  
-  .hero .intro-excerpt h1 {
-    margin-bottom: 0.5em;
-  }
-  
-  .hero .intro-excerpt h6 {
-    margin-bottom: 1em;
-  }
-  
-  /* Medium devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-    .hero {
-      padding: 40px; /* More padding on larger screens */
-    }
-  }
-  
-  /* Large devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    .hero {
-      padding: 60px; /* Even more padding on desktops */
-      height: 90vh; /* Slightly less height on large screens */
-    }
-  
-    .hero .intro-excerpt h1 {
-      font-size: 2.5em; /* Larger text on desktops */
-    }
-  
-    .hero .intro-excerpt h6 {
-      font-size: 1.5em;
-    }
-  }
-  
-  /* Extra large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    .hero {
-      height: 80vh; /* Adjust height for very large screens */
-    }
-  }
-  @media (min-width: 768px) {
-    .hero {
-      padding: calc(4rem - 30px) 0 4rem 0;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .hero {
-      padding: calc(8rem - 30px) 0 8rem 0;
-    }
-  }
-  
-  .hero .intro-excerpt {
-    position: relative;
-    z-index: 4;
-  }
-  
-  @media (min-width: 992px) {
-    .hero .intro-excerpt {
-      max-width: 450px;
-    }
-  }
-  
-  .hero h1 {
-    font-weight: 700;
-    color: #ffffff;
-    margin-bottom: 30px;
-  }
-  
-  @media (min-width: 1400px) {
-    .hero h1 {
-      font-size: 54px;
-    }
-  }
-  
-  .hero p {
-    color: rgba(255, 255, 255, 0.5);
-    margin-botom: 30px;
-  }
+.login-wrapper .form-control::placeholder {
+  color: #b0adad;
+}
 
+.login-title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
 
-  .custom-navbar {
-    background: #3b5d50 !important;
-    padding-top: 20px;
-    padding-bottom: 20px;
+.login-btn {
+  padding: 13px 30px;
+  background-color: #000;
+  border-radius: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.login-btn:hover {
+  border: 1px solid #000;
+  background-color: transparent;
+  color: #000;
+}
+
+.forgot-password-link {
+  font-size: 14px;
+  color: #080808;
+  text-decoration: underline;
+}
+
+.social-login-title {
+  font-size: 15px;
+  color: #919aa3;
+  display: -webkit-box;
+  display: flex;
+  margin-bottom: 23px;
+}
+
+.social-login-title::before,
+.social-login-title::after {
+  content: "";
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#f4f4f4));
+  background-image: linear-gradient(#f4f4f4, #f4f4f4);
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  background-size: calc(100% - 20px) 1px;
+  background-repeat: no-repeat;
+}
+
+.social-login-title::before {
+  background-position: center left;
+}
+
+.social-login-title::after {
+  background-position: center right;
+}
+
+.social-login-links {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.social-login-link img {
+  width: 40px;
+  height: 40px;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+.social-login-link+.socia-login-link {
+  margin-left: 16px;
+}
+
+.login-wrapper-footer-text {
+  font-size: 14px;
+  text-align: center;
+}
+/* Apply form control styles universally for both login and signup forms */
+.login-wrapper .form-control, .signup-wrapper .form-control {
+  border: 0;
+  border-bottom: 1px solid #e7e7e7;
+  border-radius: 0;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 15px 10px;
+  margin-bottom: 7px;
+}
+
+.login-wrapper .form-control::placeholder, .signup-wrapper .form-control::placeholder {
+  color: #b0adad;
+}
+
+/* Universal button styling */
+.login-btn, .signup-btn { /* If the signup form uses a class like 'signup-btn' */
+  padding: 13px 30px;
+  background-color: #000;
+  border-radius: 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.login-btn:hover, .signup-btn:hover {
+  border: 1px solid #000;
+  background-color: transparent;
+  color: #000;
+}
+
+/* Styling links in both forms for forgot password and account switching */
+.forgot-password-link, .account-switch-link { /* Assuming 'account-switch-link' for signup form */
+  font-size: 14px;
+  color: #080808;
+  text-decoration: underline;
+}
+
+/* Title styling for both forms */
+.login-title, .signup-title { /* Assuming 'signup-title' for signup form */
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+/* Adjusting wrapper widths for both forms */
+.login-wrapper, .signup-wrapper {
+  width: 300px;
+  max-width: 100%;
+}
+
+@media (max-width: 575px) {
+  .login-wrapper, .signup-wrapper {
+    width: 100%;
   }
-  
-  .custom-navbar .navbar-brand {
-    font-size: 32px;
-    font-weight: 600;
-  }
-  
-  .custom-navbar .navbar-brand>span {
-    opacity: .4;
-  }
-  
-  .custom-navbar .navbar-toggler {
-    border-color: transparent;
-  }
-  
-  .custom-navbar .navbar-toggler:active,
-  .custom-navbar .navbar-toggler:focus {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    outline: none;
-  }
-  
-  @media (min-width: 992px) {
-    .custom-navbar .custom-navbar-nav li {
-      margin-left: 15px;
-      margin-right: 15px;
-    }
-  }
-  
-  .custom-navbar .custom-navbar-nav li a {
-    font-weight: 500;
-    color: #ffffff !important;
-    opacity: .5;
-    -webkit-transition: .3s all ease;
-    -o-transition: .3s all ease;
-    transition: .3s all ease;
-    position: relative;
-  }
-  
-  @media (min-width: 768px) {
-    .custom-navbar .custom-navbar-nav li a:before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 8px;
-      right: 8px;
-      background: #f9bf29;
-      height: 5px;
-      opacity: 1;
-      visibility: visible;
-      width: 0;
-      -webkit-transition: .15s all ease-out;
-      -o-transition: .15s all ease-out;
-      transition: .15s all ease-out;
-    }
-  }
-  
-  .custom-navbar .custom-navbar-nav li a:hover {
-    opacity: 1;
-  }
-  
-  .custom-navbar .custom-navbar-nav li a:hover:before {
-    width: calc(100% - 16px);
-  }
-  
-  .custom-navbar .custom-navbar-nav li.active a {
-    opacity: 1;
-  }
-  
-  .custom-navbar .custom-navbar-nav li.active a:before {
-    width: calc(100% - 16px);
-  }
-  
-  .custom-navbar .custom-navbar-cta {
-    margin-left: 0 !important;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  
-  @media (min-width: 768px) {
-    .custom-navbar .custom-navbar-cta {
-      margin-left: 40px !important;
-    }
-  }
-  
-  .custom-navbar .custom-navbar-cta li {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-  
-  .custom-navbar .custom-navbar-cta li:first-child {
-    margin-right: 20px;
-  }
-  
+}
